experimental/internal/lexer/testdata/idents/non-ascii.proto.stderr.txt
error: unrecognized token
  --> testdata/idents/non-ascii.proto:5:7
   |
 5 | kitty_ğŸˆ<U+200D>â¬›
   |       ^^^^^^^^^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/idents/non-ascii.proto:6:1
   |
 6 | é»‘çŒ«
   | ^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/idents/non-ascii.proto:7:1
   |
 7 | à¤•à¤¾à¤²à¥€ à¤¬à¤¿à¤²à¥à¤²à¥€
   | ^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/idents/non-ascii.proto:7:6
   |
 7 | à¤•à¤¾à¤²à¥€ à¤¬à¤¿à¤²à¥à¤²à¥€
   |      ^^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/idents/non-ascii.proto:8:1
   |
 8 | é»‘çŒ«_suffix
   | ^^^^^^^^^^^

encountered 5 errors
